fix: container overflow and responsiveness

--- a/src/static/octadground.base.css
+++ b/src/static/octadground.base.css
@@ -104,8 +104,8 @@ piece.fading {
   position: absolute;
   top: 0;
   left: 0;
-  width: 200%;
-  height: 200%;
+  width: 100%;
+  height: 100%;
   pointer-events: none;
 }
 
